--- a/shazamrecognizer/build.gradle
+++ b/shazamrecognizer/build.gradle
@@ -5,13 +5,11 @@ plugins {
 }
 
 android {
-    compileSdk 31
-
+    compileSdk 34
+    namespace = "hr.dtakac.horton.shazamrecognizer"
     defaultConfig {
         minSdk 24
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        targetSdk 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -25,11 +23,11 @@ android {
     }
     compileOptions {
         coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "17"
     }
 }
 
