--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,21 @@
 buildscript {
     ext {
         versions = [
-                gson                    : '2.8.7',
+                gson                    : '2.10.1',
                 retrofit                : '2.9.0',
-                coroutines              : '1.6.0',
-                lifecycle               : '2.4.1',
+                coroutines              : '1.8.0',
+                lifecycle               : '2.8.4',
                 okhttp                  : '4.9.0',
-                room                    : '2.4.2',
+                room                    : '2.6.1',
                 core_library_desugaring : '1.1.5',
-                kotlin                  : '1.6.10',
-                dagger                  : '2.40.5',
-                gradle                  : '7.0.4',
-                activity_ktx            : '1.4.0',
-                compose                 : '1.2.0-alpha04',
-                compose_activity        : '1.4.0',
-                compose_material3       : '1.0.0-alpha06',
+                kotlin                  : '1.9.24',
+                dagger                  : '2.48',
+                gradle                  : '8.4.2',
+                activity_ktx            : '1.9.1',
+                compose                 : '1.5.14',
                 coil                    : '1.4.0',
-                accompanist_permissions : '0.23.0'
+                accompanist_permissions : '0.23.0',
+                hilt                    : '2.48'
         ]
     }
     repositories {
@@ -26,7 +25,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$versions.gradle"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.dagger"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt"
     }
 }
 
